--- a/modules/home-manager/features/garfetch/fluoride-config/garfetch.conf
+++ b/modules/home-manager/features/garfetch/fluoride-config/garfetch.conf
@@ -20,7 +20,7 @@ PRINT_COLOR_SAMPLE=true
 # - "/etc/garfetch/ascii/garfield1.txt"
 # - "/etc/garfetch/ascii/garfield2.txt"
 # - "/etc/garfetch/ascii/garfield3.txt"
-ASCII="/etc/garfetch/ascii/garfield2.txt"
+ASCII="$HOME/.config/garfetch/ascii/garfield2.txt"
 
 # any of the following options can be disabled with "", although
 # "COLOR_SAMPLE" and "USER_AT_HOST" will still reserve blank lines. to disable
