remove myOptions.desktopTheme.enable

--- a/modules/home-manager/features/simple-logout/config/config.json
+++ b/modules/home-manager/features/simple-logout/config/config.json
@@ -19,7 +19,7 @@
       "name": "shutdown",
       "image": "icons/shutdown.png",
       "label": "Shutdown",
-      "command": "systemctl shutdown"
+      "command": "shutdown now"
     },
     {
       "name": "suspend",
