--- a/modules/home-manager/rices/hyprland/hyprlock/hyprlock.conf
+++ b/modules/home-manager/rices/hyprland/hyprlock/hyprlock.conf
@@ -6,6 +6,8 @@ $radius = 10
 general {
   hide_cursor = false
   grace = 0
+  ignore_empty_input = true
+  fractional_scaling = true
 }
 
 background {
